Fix building error in Solaris 10.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,11 @@ IF (UNIX)
         ADD_DEFINITIONS (-DOS_LINUX)
     ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "SunOS")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_SOLARIS)
+        IF (CMAKE_SYSTEM_VERSION VERSION_GREATER 5.9)
+            ADD_DEFINITIONS (-D_XOPEN_SOURCE=600)
+        ELSE (CMAKE_SYSTEM_VERSION VERSION_GREATER 5.9)
+            ADD_DEFINITIONS (-D_XOPEN_SOURCE=500)
+        ENDIF (CMAKE_SYSTEM_VERSION VERSION_GREATER 5.9)
     ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "FreeBSD")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_FREEBSD)
     ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "NetBSD")
