Fix Apple Darwin in cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,11 +48,11 @@ IF (ENDIAN)
     ADD_DEFINITIONS (-DCMAKE_BIG_ENDIAN=1)
 ENDIF (ENDIAN)
 
-IF (NOT "${CMAKE_SYSTEM_NAME}" STREQUAL "AIX")
+IF (NOT CMAKE_SYSTEM_NAME STREQUAL "AIX")
     ADD_DEFINITIONS (-DHAVE_FREAD_UNLOCKED=1)
     ADD_DEFINITIONS (-DHAVE_FWRITE_UNLOCKED=1)
     ADD_DEFINITIONS (-DHAVE_FFLUSH_UNLOCKED=1)
-ENDIF (NOT "${CMAKE_SYSTEM_NAME}" STREQUAL "AIX")
+ENDIF (NOT CMAKE_SYSTEM_NAME STREQUAL "AIX")
 
 INCLUDE (CheckCXXCompilerFlag)
 
@@ -95,21 +95,25 @@ IF (UNIX)
         ADD_DEFINITIONS (-fno-builtin-memcmp)
     ENDIF (HAVE_FNO_BUILTIN_MEMCMP)
 
-    IF ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
+    IF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
         ADD_DEFINITIONS (-DOS_LINUX)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "SunOS")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "SunOS")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_SOLARIS)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "FreeBSD")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_FREEBSD)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "NetBSD")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "NetBSD")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_NETBSD)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "OpenBSD")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "OpenBSD")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_OPENBSD)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "DragonFly")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "DragonFly")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_DRAGONFLYBSD)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "HP-UX")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_HPUX)
-    ENDIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+        IF (APPLE)
+            ADD_DEFINITIONS (-DOS_MACOSX)
+        ENDIF (APPLE)
+    ENDIF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
     SET (LEVELDB_PORT_SOURCES port/port_posix.cc)
 ELSEIF (WIN32)
@@ -124,11 +128,6 @@ ELSEIF (WIN32)
             util/win_logger.cc
         )
     ENDIF (CYGWIN)
-ELSEIF (APPLE)
-    IF ("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
-        ADD_DEFINITIONS(-DOS_MACOSX)
-        SET (LEVELDB_PORT_SOURCES port/port_posix.cc)
-    ENDIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
 ENDIF (UNIX)
 
 INCLUDE_DIRECTORIES (
