--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,28 +92,32 @@ IF (UNIX)
         ADD_DEFINITIONS (-fno-builtin-memcmp)
     ENDIF (HAVE_FNO_BUILTIN_MEMCMP)
 
-    IF ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
+    IF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
         ADD_DEFINITIONS (-DOS_LINUX)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "SunOS")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "SunOS")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_SOLARIS)
         IF (CMAKE_SYSTEM_VERSION VERSION_GREATER 5.9)
             ADD_DEFINITIONS (-D_XOPEN_SOURCE=600)
         ELSE (CMAKE_SYSTEM_VERSION VERSION_GREATER 5.9)
             ADD_DEFINITIONS (-D_XOPEN_SOURCE=500)
         ENDIF (CMAKE_SYSTEM_VERSION VERSION_GREATER 5.9)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "FreeBSD")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_FREEBSD)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "NetBSD")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "NetBSD")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_NETBSD)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "OpenBSD")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "OpenBSD")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_OPENBSD)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "DragonFly")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "DragonFly")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_DRAGONFLYBSD)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "HP-UX")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_HPUX)
-    ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "AIX")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "AIX")
         ADD_DEFINITIONS (-D_REENTRANT -DOS_AIX)
-    ENDIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
+    ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+        IF (APPLE)
+            ADD_DEFINITIONS (-DOS_MACOSX)
+        ENDIF (APPLE)
+    ENDIF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
     SET (LEVELDB_PORT_SOURCES
         port/port_posix.cc
@@ -136,11 +140,6 @@ ELSEIF (WIN32)
             util/env_boost.cc
             util/win_logger.cc)
     ENDIF (CYGWIN)
-ELSEIF (APPLE)
-    IF ("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
-        ADD_DEFINITIONS(-DOS_MACOSX)
-        SET (LEVELDB_PORT_SOURCES port/port_posix.cc)
-    ENDIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
 ENDIF (UNIX)
 
 INCLUDE_DIRECTORIES (
