Link pthread into leveldb.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,6 +183,10 @@ ENDIF ((LEVELDB_MAJOR GREATER 0) AND (LEVELDB_MINOR GREATER 17))
 
 ADD_LIBRARY (leveldb SHARED ${LEVELDB_SOURCES} ${LEVELDB_PORT_SOURCES})
 
+IF (HAVE_PTHREAD)
+    SET_TARGET_PROPERTIES (leveldb PROPERTIES LINK_FLAGS -pthread)
+ENDIF (HAVE_PTHREAD)
+
 IF (ENABLE_SO_VERSION)
     SET_TARGET_PROPERTIES (leveldb PROPERTIES
                            SOVERSION ${LEVELDB_MAJOR}
