--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,6 +199,10 @@ IF (WIN32 AND MINGW)
     TARGET_LINK_LIBRARIES (leveldb ${Boost_LIBRARIES})
 ENDIF (WIN32 AND MINGW)
 
+IF (HAVE_PTHREAD)
+    SET_TARGET_PROPERTIES (leveldb PROPERTIES LINK_FLAGS -pthread)
+ENDIF (HAVE_PTHREAD)
+
 IF (ENABLE_SO_VERSION)
     SET_TARGET_PROPERTIES (leveldb PROPERTIES
         SOVERSION ${LEVELDB_MAJOR}
