Enable sse-4.2 if available.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,11 @@ IF (HAVE_WALL)
     ADD_DEFINITIONS (-Wall)
 ENDIF (HAVE_WALL)
 
+CHECK_CXX_COMPILER_FLAG (-msse4.2 HAVE_SSE)
+IF (HAVE_SSE)
+    ADD_DEFINITIONS (-msse4.2 -DLEVELDB_PLATFORM_POSIX_SSE)
+ENDIF (HAVE_SSE)
+
 IF (UNIX)
     IF (HAVE_ATOMIC)
         ADD_DEFINITIONS (-DLEVELDB_PLATFORM_POSIX)
@@ -115,7 +120,7 @@ IF (UNIX)
         ENDIF (APPLE)
     ENDIF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
-    SET (LEVELDB_PORT_SOURCES port/port_posix.cc)
+    SET (LEVELDB_PORT_SOURCES port/port_posix.cc port/port_posix_sse.cc)
 ELSEIF (WIN32)
     IF (CYGWIN)
         ADD_DEFINITIONS (-D_REENTRANT -DOS_LINUX -DCYGWIN)
