Enable building with snappy.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ SET (LEVELDB_MAJOR 1)
 SET (LEVELDB_MINOR 18)
 
 OPTION (ENABLE_SO_VERSION "Enable shared library version" ON)
+OPTION (ENABLE_SNAPPY "Enable building with snappy" ON)
 OPTION (LIB_SUFFIX "Installation library directory suffix")
 OPTION (LEVELDB_VERSION "Set leveldb version")
 
@@ -41,6 +42,14 @@ CHECK_INCLUDE_FILE_CXX ("endian.h" HAVE_ENDIAN_H)
 IF (HAVE_ENDIAN_H)
     ADD_DEFINITIONS(-DHAVE_ENDIAN_H=1)
 ENDIF (HAVE_ENDIAN_H)
+
+IF (ENABLE_SNAPPY)
+    CHECK_INCLUDE_FILE_CXX ("snappy.h" HAVE_SNAPPY_H)
+    IF (HAVE_SNAPPY_H)
+        ADD_DEFINITIONS(-DSNAPPY)
+        SET (SNAPPY_LIBRARIES snappy)
+    ENDIF (HAVE_SNAPPY_H)
+ENDIF (ENABLE_SNAPPY)
 
 INCLUDE (TestBigEndian)
 TEST_BIG_ENDIAN(ENDIAN)
@@ -187,6 +196,7 @@ IF ((LEVELDB_MAJOR GREATER 0) AND (LEVELDB_MINOR GREATER 17))
 ENDIF ((LEVELDB_MAJOR GREATER 0) AND (LEVELDB_MINOR GREATER 17))
 
 ADD_LIBRARY (leveldb SHARED ${LEVELDB_SOURCES} ${LEVELDB_PORT_SOURCES})
+TARGET_LINK_LIBRARIES (leveldb ${SNAPPY_LIBRARIES})
 
 IF (HAVE_PTHREAD)
     SET_TARGET_PROPERTIES (leveldb PROPERTIES LINK_FLAGS -pthread)
