Enable building with snappy.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ SET (LEVELDB_MAJOR 1)
 SET (LEVELDB_MINOR 18)
 
 OPTION (ENABLE_SO_VERSION "Enable shared library version" ON)
+OPTION (ENABLE_SNAPPY "Enable building with snappy" ON)
 OPTION (LIB_SUFFIX "Installation library directory suffix")
 OPTION (LEVELDB_VERSION "Set leveldb version")
 
@@ -41,6 +42,14 @@ CHECK_INCLUDE_FILE_CXX ("endian.h" HAVE_ENDIAN_H)
 IF (HAVE_ENDIAN_H)
     ADD_DEFINITIONS(-DHAVE_ENDIAN_H=1)
 ENDIF (HAVE_ENDIAN_H)
+
+IF (ENABLE_SNAPPY)
+    CHECK_INCLUDE_FILE_CXX ("snappy.h" HAVE_SNAPPY_H)
+    IF (HAVE_SNAPPY_H)
+        ADD_DEFINITIONS(-DSNAPPY)
+        SET (SNAPPY_LIBRARIES snappy)
+    ENDIF (HAVE_SNAPPY_H)
+ENDIF (ENABLE_SNAPPY)
 
 INCLUDE (TestBigEndian)
 TEST_BIG_ENDIAN(ENDIAN)
@@ -196,7 +205,9 @@ IF (WIN32 AND MINGW)
         chrono
         thread_win32)
     INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})
-    TARGET_LINK_LIBRARIES (leveldb ${Boost_LIBRARIES})
+    TARGET_LINK_LIBRARIES (leveldb ${SNAPPY_LIBRARIES} ${Boost_LIBRARIES})
+ELSE (WIN32 AND MINGW)
+    TARGET_LINK_LIBRARIES (leveldb ${SNAPPY_LIBRARIES})
 ENDIF (WIN32 AND MINGW)
 
 IF (HAVE_PTHREAD)
